# conformal

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  COPYING  Cargo.toml  README.md  bun.lockb  bunfig.toml  knope.toml  package.json  typedoc.json
.cargo/: config.toml
.changeset/: afraid-dragons-smash.md  angry-knives-travel.md  big-lions-invent.md  brown-sides-chew.md  bumpy-mails-follow.md  busy-toes-refuse.md  chilly-bottles-yell.md  chubby-crabs-go.md  clear-bikes-show.md  clever-bottles-stand.md  common-clubs-cough.md  common-parrots-grow.md  crazy-teams-rescue.md  cruel-moles-jump.md  curly-bags-appear.md  curly-sheep-sort.md  cyan-queens-fail.md  dark-cloths-carry.md  dirty-files-refuse.md  dirty-teams-exist.md  easy-masks-end.md  easy-ravens-punch.md  evil-chefs-argue.md  fair-cars-dress.md  famous-phones-allow.md  five-worlds-leave.md  flat-zebras-wave.md  fluffy-pears-jam.md  free-seals-create.md  full-lights-judge.md  funny-hands-drive.md  funny-jars-wait.md  gentle-ants-start.md  gentle-bottles-kneel.md  gentle-eggs-bake.md  grumpy-seals-melt.md  happy-houses-ring.md  hot-boats-sleep.md  itchy-bikes-take.md  khaki-buckets-add.md  (+41 more)
framework/: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
framework/rust/ui/: Cargo.toml
framework/rust/ui/src/: server.rs  web_ui.rs
framework/rust/ui/src/server/: tests.rs
framework/rust/vst-wrapper/: Cargo.toml
framework/rust/vst-wrapper/src/: dummy_host.rs  factory.tests.rs  fake_ibstream.rs  host_info.rs  lib.rs  parameters.rs
framework/rust/vst-wrapper/src/edit_controller/: mod.rs  tests.rs
framework/rust/vst-wrapper/src/processor/: events.rs  mod.rs  parameters.rs  state.rs  test_utils.rs  tests.rs
framework/rust/vst-wrapper/src/view/: mod.rs  tests.rs
plugs/: .eslintrc.cjs  Cargo.toml  README.md  bun.lockb  package.json  tsconfig.json
plugs/rust/p61/component/: Cargo.toml
plugs/rust/p61/component/benches/: process.rs
plugs/rust/p61/component/src/: lib.rs  synth.rs
plugs/rust/p61/component/src/synth/: mg.rs  osc_utils.rs  tests.rs  voice.rs
plugs/rust/p61/component/src/synth/env/: adsr.rs  duck.rs  mod.rs
plugs/rust/p61/component/src/synth/env/adsr/: tests.rs
plugs/rust/p61/component/src/synth/env/duck/: tests.rs
plugs/rust/p61/component/src/synth/mg/: tests.rs
plugs/rust/p61/component/src/synth/voice/: dco1.rs  dco2.rs  tests.rs  vca.rs  vcf.rs
plugs/rust/p61/component/src/synth/voice/dco1/: tests.rs
plugs/rust/p61/component/src/synth/voice/dco2/: filter.rs  tests.rs
plugs/rust/p61/component/src/synth/voice/vca/: tests.rs
plugs/rust/p61/component/src/synth/voice/vcf/: tests.rs
plugs/rust/rchorus/component/: Cargo.toml
plugs/rust/rchorus/component/benches/: process.rs
plugs/rust/rchorus/component/src/: anti_aliasing_filter.rs  effect.rs  lib.rs  nonlinearity.rs
plugs/rust/rchorus/component/src/compander/: mod.rs  tests.rs
plugs/rust/rchorus/component/src/effect/: tests.rs
plugs/rust/rchorus/component/src/kernel/: mod.rs
plugs/rust/rchorus/component/src/lfo/: mod.rs  tests.rs
plugs/rust/rchorus/component/src/look_behind/: mod.rs  tests.rs
plugs/rust/rchorus/component/src/modulated_delay/: mod.rs  tests.rs
plugs/rust/rchorus/component/src/polyphase_kernel/: mod.rs
plugs/rust/shared/component_benchmarks/: Cargo.toml
plugs/rust/shared/component_benchmarks/src/: lib.rs
plugs/rust/shared/iir/: Cargo.toml
plugs/rust/shared/iir/src/: lib.rs
plugs/rust/shared/iir/src/dc_blocker/: mod.rs  tests.rs
plugs/rust/shared/iir/src/svf/: mod.rs  tests.rs
plugs/rust/shared/util/: Cargo.toml
plugs/rust/shared/util/src/: f32.rs  iter.rs  lib.rs  slice_ops.rs  test_utils.rs  window.rs
plugs/rust/shared/util/src/slice_ops/: tests.rs
rust-changeset/: add_dependency_to_zlib_licensed_code.md  add_global_expression_support_to_pzip.md  add_support_for_persistant_ui_state.md  added_pgrab_macro.md  allow_basic_resizable_plug_ins.md  (+45 more)
rust/component/: CHANGELOG.md  Cargo.toml  README.md
rust/component/src/: effect.rs  events.rs  lib.rs  parameters.rs  synth.rs
rust/component/src/audio/: compare.rs  mod.rs  slice.rs  test_utils.rs  utils.rs
rust/component/src/audio/slice/: tests.rs
rust/component/src/events/: tests.rs
rust/component/src/parameters/: store.rs  test_utils.rs  tests.rs  utils.rs
rust/component/src/parameters/utils/: constant_buffer_states.rs  either.rs  per_sample.rs  pzip.rs  ramped.rs  skip.rs  states_map.rs  tests.rs
rust/core/: CHANGELOG.md  Cargo.toml  README.md
rust/core/src/: lib.rs  mac_bundle_utils.rs  path_utils.rs  windows_dll_utils.rs
rust/core/src/parameters/: mod.rs  serialization.rs  store.rs
rust/core/src/parameters/serialization/: tests.rs
rust/macos-bundle/: Cargo.toml  README.md  docs_boilerplate.md
rust/macos-bundle/src/: lib.rs
rust/poly/: CHANGELOG.md  Cargo.toml  README.md
rust/poly/src/: lib.rs  splice.rs  state.rs
rust/poly/src/state/: tests.rs
rust/preferences/: CHANGELOG.md  Cargo.toml  README.md
rust/preferences/src/: fake_os.rs  lib.rs  macos.rs  tests.rs  windows.rs
rust/ui/: CHANGELOG.md  Cargo.toml  README.md
rust/ui/src/: lib.rs  preferences_convert.rs  protocol.rs  server.rs  web_ui.rs
rust/ui/src/protocol/: tests.rs
rust/ui/src/server/: tests.rs
rust/vst-wrapper/: CHANGELOG.md  Cargo.toml  README.md
rust/vst-wrapper/src/: edit_controller.rs  factory.rs  factory.tests.rs  fake_ibstream.rs  host_info.rs  io.rs  lib.rs  mpe.rs  mpe_quirks.rs  parameters.rs  processor.rs  view.rs
rust/vst-wrapper/src/edit_controller/: mod.rs  tests.rs
rust/vst-wrapper/src/mpe/: quirks.rs
rust/vst-wrapper/src/processor/: events.rs  mod.rs  parameters.rs  state.rs  test_utils.rs  tests.rs
rust/vst-wrapper/src/view/: mod.rs  tests.rs
web/create-plugin/template-effect/rust/{{plug_slug}}/vst/: Cargo.toml  about.hbs  about.toml  {{cargo_toml}}
web/create-plugin/template-effect/rust/{{plug_slug}}/vst/src/: lib.rs
web/create-plugin/template-synth/rust/{{plug_slug}}/vst/: .prettierignore  Cargo.toml  about.hbs  {{cargo_toml}}
web/create-plugin/template-synth/rust/{{plug_slug}}/vst/src/: lib.rs
(+337 files in other folders)
