[workspace]
resolver = "2"
members = [
    "rust/vst-wrapper",
    "rust/macos-bundle",
    "rust/preferences",
    "rust/component",
    "rust/ui",
    "rust/core",
    "rust/poly",
]

[workspace.package]
rust-version = "1.90.0"
edition = "2024"

[workspace.lints.rust]
nonstandard_style = "warn"
rust_2018_idioms = "warn"
future_incompatible = "warn"
missing_docs = "warn"

[workspace.lints.rustdoc]
private_doc_tests = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
type_complexity = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"
large_enum_variant = "allow"
