[workspace]
resolver = "2"
members = [
    "rust/vst-wrapper",
    "rust/preferences",
    "rust/component",
    "rust/ui",
    "rust/core",
    "rust/poly",
]

[workspace.package]
rust-version = "1.93.1"
edition = "2024"

[workspace.dependencies]
conformal_component = { version = "0.5.0", path = "rust/component" }
conformal_core = { version = "0.5.0", path = "rust/core" }
conformal_preferences = { version = "0.4.0", path = "rust/preferences" }
conformal_ui = { version = "0.5.0", path = "rust/ui" }
vst3 = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
rmp-serde = "1.1.2"
itertools = "0.13.0"
assert_approx_eq = "1.1.0"
process_path = "0.1.4"
objc = "0.2.7"
serde_json = "1.0.117"
windows-registry = "0.6"
fxhash = "0.2.1"
base64 = "0.22.1"
wry = { version = "0.40.0", features = ["devtools"] }
serde_bytes = "0.11.14"
mime_guess = "2.0.4"
arrayvec = "0.7.6"
const_format = "0.2.35"

[workspace.lints.rust]
nonstandard_style = "warn"
rust_2018_idioms = "warn"
future_incompatible = "warn"
missing_docs = "warn"

[workspace.lints.rustdoc]
private_doc_tests = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
type_complexity = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"
large_enum_variant = "allow"
