[package]
name = "conformal_component"
version = "0.0.0"
edition = "2021"
rust-version = "1.79.0"
license = "ISC"
description = "Defines basic audio component abstraction for conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
documentation = "https://russellmcc.github.io/conformal/rust-doc/conformal_component"
homepage = "https://russellmcc.github.io/conformal"

[dependencies]
itertools = "0.13.0"
fxhash = "0.2.1"
