[package]
name = "conformal_component"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Defines basic audio component abstraction for conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
documentation = "https://russellmcc.github.io/conformal/rust-doc/conformal_component"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
itertools = { workspace = true }
fxhash = { workspace = true }

[dev-dependencies]
assert_approx_eq = { workspace = true }
