[package]
name = "conformal_core"
version = "0.3.7"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Code shared between wrappers in conformal framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
conformal_component = { version = "0.3.6", path = "../component" }
serde = { version = "1.0.193", features = ["derive"] }
