[package]
name = "conformal_core"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Code shared between wrappers in conformal framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
conformal_component = { workspace = true }
serde = { workspace = true }
