[package]
name = "conformal_macos_bundle"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Utilities for macOS bundle directories used by the conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
process_path = { workspace = true }
objc = { workspace = true }
