[package]
name = "conformal_poly"
version = "0.3.5"
edition = "2021"
rust-version.workspace = true
license = "ISC"
description = "Helper utilities for polyphonic synthesizers in the conformal framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
conformal_component = { version = "0.3.5", path = "../component" }
arrayvec = "0.7.6"
