[package]
name = "conformal_poly"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Helper utilities for polyphonic synthesizers in the conformal framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
conformal_component = { workspace = true }
arrayvec = { workspace = true }

[dev-dependencies]
assert_approx_eq = { workspace = true }
