[package]
name = "conformal_preferences"
version = "0.0.0"
edition = "2021"
license = "ISC"
description = "Utilities for persistent user preferences used by the conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
documentation = "https://russellmcc.github.io/conformal/rust-doc/conformal_preferences"
homepage = "https://russellmcc.github.io/conformal"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.117"

[features]
test-utils = []

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
