[package]
name = "conformal_preferences"
version = "0.4.0"
edition.workspace = true
license = "ISC"
description = "Utilities for persistent user preferences used by the conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[features]
test-utils = []

[target.'cfg(target_os = "macos")'.dependencies]
objc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = { workspace = true }
