[package]
name = "conformal_ui"
version = "0.3.5"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Implements a wry-based UI for audio processors. Part of the conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
conformal_component = { version = "0.3.5", path = "../component" }
conformal_core = { version = "0.3.5", path = "../core" }
wry = { version = "0.40.0", features = ["devtools"] }
conformal_preferences = { version = "0.3.5", path = "../preferences" }
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.14"
rmp-serde = "1.1.2"
mime_guess = "2.0.4"

[target.'cfg(target_os = "macos")'.dependencies]
conformal_macos_bundle = { version = "0.3.5", path = "../macos-bundle" }

[dev-dependencies]
conformal_preferences = { version = "0.3.5", path = "../preferences", features = [
    "test-utils"
] }
