[package]
name = "conformal_ui"
version = "0.3.7"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Implements a wry-based UI for audio processors. Part of the conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
conformal_component = { version = "0.3.6", path = "../component" }
conformal_core = { version = "0.3.7", path = "../core" }
wry = { workspace = true }
conformal_preferences = { version = "0.3.6", path = "../preferences" }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
mime_guess = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
conformal_macos_bundle = { version = "0.3.5", path = "../macos-bundle" }

[dev-dependencies]
conformal_preferences = { version = "0.3.6", path = "../preferences", features = [
    "test-utils"
] }
