[package]
name = "conformal_ui"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Implements a wry-based UI for audio processors. Part of the conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
conformal_component = { workspace = true }
conformal_core = { workspace = true }
wry = { workspace = true }
conformal_preferences = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
mime_guess = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
conformal_macos_bundle = { workspace = true }

[dev-dependencies]
conformal_preferences = { workspace = true, features = [
    "test-utils"
] }
