[package]
name = "conformal_vst_wrapper"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Implements a VST3-compatible plug-in for audio processors implemented with the conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
documentation = "https://russellmcc.github.io/conformal/rust-doc/conformal_vst_wrapper"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
conformal_macos_bundle = { version = "0.3.5", path = "../macos-bundle" }

[dependencies]
vst3 = "0.1.2"
serde = { version = "1.0.193", features = ["derive"] }
conformal_component = { version = "0.3.5", path = "../component" }
conformal_ui = { version = "0.3.6", path = "../ui" }
conformal_core = { version = "0.3.6", path = "../core" }
rmp-serde = "1.1.2"
itertools = "0.13.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
