[package]
name = "conformal_vst_wrapper"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
description = "Implements a VST3-compatible plug-in for audio processors implemented with the conformal audio plug-in framework."
repository = "https://github.com/russellmcc/conformal"
documentation = "https://russellmcc.github.io/conformal/rust-doc/conformal_vst_wrapper"
homepage = "https://russellmcc.github.io/conformal"

[lints]
workspace = true

[dependencies]
vst3 = { workspace = true }
serde = { workspace = true }
conformal_component = { workspace = true }
conformal_ui = { workspace = true }
conformal_core = { workspace = true }
rmp-serde = { workspace = true }
itertools = { workspace = true }
const_format = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
assert_approx_eq = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
process_path = { workspace = true }
