[package]
name = "ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
license = "ISC"
publish = false

[dependencies]
base64 = "0.22.1"
conformal_component = { path = "../component" }
wry = { version = "0.40.0", features = ["devtools"] }
conformal_preferences = { path = "../preferences" }
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.14"
rmp-serde = "1.1.2"
mime_guess = "2.0.4"

[target.'cfg(target_os = "macos")'.dependencies]
conformal_macos_bundle = { path = "../macos-bundle" }

[dev-dependencies]
conformal_preferences = { path = "../preferences", features = ["test-utils"] }
