[package]
name = "vst_wrapper"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
license = "ISC"
publish = false

[target.'cfg(target_os = "macos")'.dependencies]
macos_bundle = { path = "../macos-bundle" }

[dependencies]
vst3 = "0.1.2"
serde = { version = "1.0.193", features = ["derive"] }
conformal_component = { path = "../component" }
ui = { path = "../ui" }
rmp-serde = "1.1.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"