[package]
name = "rchorus_component"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
license = "ISC"
publish = false

[dependencies]
num-traits = "0.2.19"
itertools = "0.13.0"
conformal_vst_wrapper = { path = "../../../../framework/rust/vst-wrapper" }
vst3 = "0.1.2"
conformal_component = { path = "../../../../framework/rust/component" }
util = { path = "../../shared/util" }
iir = { path = "../../shared/iir" }

[dev-dependencies]
assert_approx_eq = "1.1.0"
more-asserts = "0.3.1"
snapshots = { path = "../../shared/snapshots" }
util = { path = "../../shared/util", features = ["test-utils"] }
component_benchmarks = { path = "../../shared/component_benchmarks" }
criterion = "0.3"

[[bench]]
name = "process"
harness = false
