[package]
name = "util"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
license = "ISC"
publish = false

[features]
test-utils = ["dep:rand", "dep:rand_xoshiro", "dep:realfft", "dep:num"]

[dependencies]
rand = { version = "0.8.5", optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
realfft = { version = "3.3.0", optional = true }
num = { version = "0.4.1", optional = true }
num-traits = "0.2.19"

[dev-dependencies]
proptest = "1.4.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
realfft = "3.3.0"
num = "0.4.1"

