[package]
name = "{{plug_slug}}_vst"
edition = "2021"
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
conformal_vst_wrapper = "{{{conformal_vst_wrapper_version}}}"
vst3 = "0.1.2"
{{plug_slug}}_component = { path = "../component" }