[package]
name = "{{plug_slug}}_vst"
edition = "2021"
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
conformal_vst_wrapper = "{{{conformal_vst_wrapper_version}}}"
vst3 = "0.1.2"
{{plug_slug}}_component = { path = "../component" }