[package]
name = "{{plug_slug}}_vst"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
conformal_vst_wrapper = "{{{conformal_vst_wrapper_version}}}"
vst3 = { git = "https://github.com/russellmcc/vst3-rs.git", branch = "support-extern-records" }
{{plug_slug}}_component = { path = "../component" }